--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div>
         <ul>
             <li>
-                <a href="/Discamp/index.html" target="_blank"></a>
+                <a href="/index.html" target="_blank">Formulario</a>
             </li>
             <li>
-                <a href="/pagina_2/index.html" target="_blank"></a>
+                <a href="/pagina_2/index.html" target="_blank">Chupetin</a>
             </li>
         </ul>
     </div>
