--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="/index.html" target="_blank">Formulario</a>
             </li>
             <li>
-                <a href="/pagina_2/index.html" target="_blank">Chupetin</a>
+                <a href="/Discamp/index.html" target="_blank">Discamp</a>
             </li>
         </ul>
     </div>
