--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <ul>
-            <li>
-                <a href="/index.html" target="_blank">Formulario</a>
-            </li>
-            <li>
-                <a href="/Discamp/index.html" target="_blank">Discamp</a>
-            </li>
-        </ul>
-    </div>
+    <ul>
+        <li>
+            <a href="/pagina_2/index.html" target="_blank">Formulario</a>
+        </li>
+        <li>
+            <a href="/Discamp/index.html" target="_blank">Discamp</a>
+        </li>
+    </ul>
 </body>
 </html>
