--- a/pagina_2/index.html
+++ b/pagina_2/index.html
@@ -14,7 +14,7 @@
         <div class="header__text">
             <h1>CHUPETIN</h1>
             <p class="tex__header">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi debitis libero doloremque tempora quos, perspiciatis fuga quibusdam esse fugiat, vel repellat obcaecati facilis rerum quidem, hic cumque accusamus quod non!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi debitis libero doloremque tempora quos, perspiciatis fuga quibusdam esse fugiat, vel repellat obcaecati facilis rerum quidem, hic cumque accusamus quod non!m
             </p>
         </div>
     </header>
