--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <ul>
         <li>
-            <a href="/pagina_2/index.html" target="_blank">Formulario</a>
+            <a href="file:///C:/Users/jesus/OneDrive/Documentos/proyectos/Discamp/index.html" target="_blank">Formulario</a>
         </li>
         <li>
-            <a href="/Discamp/index.html" target="_blank">Discamp</a>
+            <a href="file:///C:/Users/jesus/OneDrive/Documentos/proyectos/pagina_2/index.html" target="_blank">Chupetin</a>
         </li>
     </ul>
 </body>
