Modifique index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <ul>
         <li>
-            <a href="file:///C:/Users/jesus/OneDrive/Documentos/proyectos/formulario/index.html" target="_blank">Formulario</a>
+            <a href="formulario/index.html" target="_blank">Formulario</a>
         </li>
         <li>
-            <a href="file:///C:/Users/jesus/OneDrive/Documentos/proyectos/pagina_2/index.html" target="_blank">Chupetin</a>
+            <a href="pagina_2/index.html" target="_blank">Chupetin</a>
         </li>
     </ul>
 </body>
