--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>
+    <div class="conteiner">
+        <h1>
+            Mini-Proyectos
+        </h1>
+        <div class="link">
             <a href="formulario/index.html" target="_blank">Formulario</a>
-        </li>
-        <li>
+        </div>
+        <div class="link">
             <a href="pagina_2/index.html" target="_blank">Chupetin</a>
-        </li>
-    </ul>
+        </div>
+    </div>
 </body>
 </html>
