Modifique varias cosas

--- a/Discamp/index.html
+++ b/Discamp/index.html
@@ -3,55 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/app.css">
     <title>Discamp</title>
 </head>
 <body>
-    <div class="conteiner">
-        <div class="left__conteiner">
-            <div class="titulo">
-                <h1>
-                    Chat
-                </h1>
-            </div>
-            <div class="bar__conteiner">
-                <input type="text" placeholder="Buscar" class="bar">
+    <div class="container">
+        <div class="left__container">
+            <div class="position">
+                <div class="titulo">
+                    <h1>
+                        Chat
+                    </h1>
+                </div>
+                <div class="bar__container">
+                    <input type="text" placeholder="Buscar" class="bar">
+                </div>
             </div>
             <div class="msj">
-                <p>
+                <img src="./images/LAMINE YAMAL.png" alt="">
+                <p class="mensaje">
                     jesus rodriguez
                 </p>
             </div>
-            <div class="msj">
-                <p>
-                    jesus
-                </p>
+        </div>    
+        <div class="right__container">
+            <div class="contenido">
+                <div class="cell">
+                    <div class="contenedor">
+                        <img src="/Discamp/images/LAMINE YAMAL.png" alt="" class="laming">
+                        <p>
+                            LAMINE YAMAL
+                        </p>
+                        <i  class="material-icons aa">phone_in_talk</i>
+                    </div>
+                </div>
+                <div class="mm1">
+                    <p class="right-container__message">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm2">
+                    <p class="right-container__message message2">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm1">
+                    <p class="right-container__message">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm2">
+                    <p class="right-container__message message2">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm1">
+                    <p class="right-container__message">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm2">
+                    <p class="right-container__message message2">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm1">
+                    <p class="right-container__message">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
+                <div class="mm2">
+                    <p class="right-container__message message2">
+                        hola como estan, jajajaj
+                    </p>
+                </div>
             </div>
-            <div class="msj">
-                <p>
-                    jesus
-                </p>
+            <div class="conteiner">
+                <i class="material-icons">keyboard_voice</i>
+                <input type="text" class="men" placeholder="Escribe tu mensaje">
+                <i class="material-icons">send</i>
             </div>
-            <div class="msj">
-                <p>
-                    jesus
-                </p>
-            </div>
-            <div class="msj">
-                <p>
-                    jesus
-                </p>
-            </div>
-            <div class="msj">
-                <p>
-                    jesus
-                </p>
-            </div>
-        </div>
-        <div class="right__conteiner">
-            <p class="p">
-                hola como estan, jajajaj xd
-            </p>
         </div>
     </div>
 </body>
