--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <div class="link">
             <a href="pagina_2/index.html" target="_blank">Chupetin</a>
         </div>
+        <div class="link">
+            <a href="/KeePass/index.html" target="_blank">KeePass</a>
+        </div>
+        <div class="link">
+            <a href="/Discamp/index.html" target="_blank">Discamp</a>
+        </div>
     </div>
 </body>
 </html>
