--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             Mini-Proyectos
         </h1>
         <div class="link">
-            <a href="formulario/index.html" target="_blank">Formulario</a>
+            <a href="./formulario" target="_blank">Formulario</a>
         </div>
         <div class="link">
-            <a href="pagina_2/index.html" target="_blank">Chupetin</a>
+            <a href="./pagina_2" target="_blank">Chupetin</a>
         </div>
         <div class="link">
-            <a href="/KeePass/index.html" target="_blank">KeePass</a>
+            <a href="./KeePass" target="_blank">KeePass</a>
         </div>
         <div class="link">
-            <a href="/Discamp/index.html" target="_blank">Discamp</a>
+            <a href="./Discamps" target="_blank">Discamp</a>
         </div>
     </div>
 </body>
