--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="./KeePass" target="_blank">KeePass</a>
         </div>
         <div class="link">
-            <a href="./Discamps" target="_blank">Discamp</a>
+            <a href="./Discamp" target="_blank">Discamp</a>
         </div>
     </div>
 </body>
