--- a/KeePass/index.html
+++ b/KeePass/index.html
@@ -26,9 +26,9 @@
             </p>
             <div class="others-logins">
                 <a href="#" class="a-login">
-                    <img src="/KeePass/images/icons8-facebook.svg" class="facebook"></a>
+                    <img src="./images/icons8-facebook.svg" class="facebook"></a>
                 <a href="#" class="a-login">
-                    <img src="/KeePass/images/icons8-google.svg" class="google"></a>
+                    <img src="./images/icons8-google.svg" class="google"></a>
             </div>
         </form>
         <div class="information-conteiner">
