Modifique hojas de estilo

--- a/KeePass/index.html
+++ b/KeePass/index.html
@@ -17,7 +17,7 @@
                 </h1>
             </div>
             <div class="inputs">
-                <input type="email" placeholder="Jhon@gmail.com" required>
+                <input type="email" placeholder="Ejemplo@gmail.com" required>
                 <input type="password" placeholder="*******" required>
                 <button class="bottom">sing in</button>
             </div>
@@ -40,7 +40,7 @@
                     Welcome to KeePass!
                     Where you can store your passwords safely.
                 </p>
-                <a href="$" class="a-register">No Acount?</a>
+                <a href="./page-KeePass/" class="a-register">No Acount?</a>
             </div>             
         </div>
     </div>
