--- a/KeePass/index.html
+++ b/KeePass/index.html
@@ -34,12 +34,10 @@
         <div class="information-conteiner">
             <div class="register">
                 <h1 class="h1">
-                    KeePass
+                    Login
                 </h1>
                 <p class="description">
-                    Welcome to KeePass!
-                    Where you can store your passwords safely.
-                </p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 <a href="./page-KeePass/" class="a-register">No Acount?</a>
             </div>             
         </div>
