--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="conteiner">
@@ -18,7 +18,7 @@
             <a href="./pagina_2" target="_blank">Chupetin</a>
         </div>
         <div class="link">
-            <a href="./KeePass" target="_blank">KeePass</a>
+            <a href="./KeePass" target="_blank">Login</a>
         </div>
         <div class="link">
             <a href="./Discamp" target="_blank">Discamp</a>
