--- a/KeePass/index.html
+++ b/KeePass/index.html
@@ -37,7 +37,7 @@
                     Login
                 </h1>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam mollitia quasi repellat cum quaerat, temporibus odit accusantium tempore
                 <a href="./page-KeePass/" class="a-register">No Acount?</a>
             </div>             
         </div>
