--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="./formulario" target="_blank">Formulario</a>
         </div>
         <div class="link">
-            <a href="./pagina_2" target="_blank">Chupetin</a>
+            <a href="./Chupetin/" target="_blank">Chupetin</a>
         </div>
         <div class="link">
             <a href="./KeePass" target="_blank">Login</a>
