Cambios en Barcapedia

--- a/Barcapedia/index.html
+++ b/Barcapedia/index.html
@@ -14,7 +14,7 @@
         </div>
         <nav class="nav">
             <div class="links-nav">
-                <a href="#">Historia</a>
+                <a href="#Historia">Historia</a>
             </div>
             <div class="links-nav">
                 <a href="#">Jugadores</a>
@@ -26,11 +26,35 @@
                 <a href="#" class="log-in">Iniciar sesion <i class="fa-solid fa-user"></i></a>
             </div>
         </nav>
-        <div class="container">
-            <h1>
-                Barça<span class="color-text">pedia</span>
-            </h1>
-        </div>
     </header>
+    <div class="container">
+        <h1>
+            Barça<span class="color-text">pedia</span>
+        </h1>
+        <div class="sobre-mi">
+            <h2 class="h2-sobre-mi">
+                Sobre mi
+            </h2>
+            <div class="sobre-mi-box">
+                <p class="p-sobre-mi">
+                    ¡Hola! Mi nombre es Jesús Rodríguez, tengo 18 años y este es mi primer proyecto pequeño. Mezclé las dos cosas que me gustan: el fútbol y el frontend. Esta página no tiene JS, solamente HTML y CSS. Llevo más de 2 meses estudiando por mi cuenta el lado de frontend. Actualmente, me encuentro en la Universidad del Zulia (LUZ) en Maracaibo, Venezuela, en la carrera de Computación.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container-historia" id="Historia">
+        <div class="historia">
+            <h2 class="h2-historia">
+                Historia
+            </h2>
+            <div class="historia-box">
+                <p class="p-historia">
+                    El Fútbol Club Barcelona (en catalán: Futbol Club Barcelona), conocido popularmente como Barça, es una entidad polideportiva con sede en Barcelona (Cataluña, España). Fue fundado como club de fútbol el 29 de noviembre de 1899 y registrado oficialmente el 5 de enero de 1903. <br><br> A nivel institucional, es uno de los cuatro clubes profesionales de fútbol del país cuya entidad jurídica no es la de sociedad anónima deportiva (SAD), ya que su propiedad recae en sus más de 143,000 socios. Otra salvedad que comparte con el Athletic Club y el Real Madrid es su participación ininterrumpida en la máxima categoría de la Liga Nacional de Fútbol Profesional, la Primera División de España, desde su establecimiento en 1929. <br><br>
+
+                    En dicha competición, posee los honores de haber sido el primer campeón histórico de la misma, es su segundo club con más títulos, y tiene el récord de la máxima puntuación en una sola edición.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
