--- a/Barcapedia/index.html
+++ b/Barcapedia/index.html
@@ -17,7 +17,7 @@
                 <a href="#Historia">Historia</a>
             </div>
             <div class="links-nav">
-                <a href="#">Jugadores</a>
+                <a href="#jugadores">Jugadores</a>
             </div>
             <div class="links-nav">
                 <a href="#">Titulos</a>
@@ -50,9 +50,219 @@
             <div class="historia-box">
                 <p class="p-historia">
                     El Fútbol Club Barcelona (en catalán: Futbol Club Barcelona), conocido popularmente como Barça, es una entidad polideportiva con sede en Barcelona (Cataluña, España). Fue fundado como club de fútbol el 29 de noviembre de 1899 y registrado oficialmente el 5 de enero de 1903. <br><br> A nivel institucional, es uno de los cuatro clubes profesionales de fútbol del país cuya entidad jurídica no es la de sociedad anónima deportiva (SAD), ya que su propiedad recae en sus más de 143,000 socios. Otra salvedad que comparte con el Athletic Club y el Real Madrid es su participación ininterrumpida en la máxima categoría de la Liga Nacional de Fútbol Profesional, la Primera División de España, desde su establecimiento en 1929. <br><br>
-
                     En dicha competición, posee los honores de haber sido el primer campeón histórico de la misma, es su segundo club con más títulos, y tiene el récord de la máxima puntuación en una sola edición.
                 </p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="container-jugadores-background" id="jugadores">
+        <div class="container-player">
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/673eb7cc-5a07-4b94-a6d1-310fc7ca9248/07-Ferran_Torres-M.jpg?width=1200&height=750" alt="Ferran Torres">
+                </div>
+                <div class="player-info">
+                    <h2>Ferran Torres</h2>
+                    <p>Posición: Delantero</p>
+                    <p>Edad: 24 años</p>
+                    <p>Partidos: 123</p>
+                    <p>Goles: 26</p>
+                    <p>Asistencias: 14</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/b666059e-1d0a-493f-a7e5-dd7a258d8165/09-Lewandowski-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Robert Lewandowski</h2>
+                    <p>Posición: Delantero</p>
+                    <p>Edad: 36 años</p>
+                    <p>Partidos: 111</p>
+                    <p>Goles: 78</p>
+                    <p>Asistencias: 19</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/f90227fc-4cca-4245-8d96-d1c14f5dcc9a/11-Raphinha-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Raphael Raphinha</h2>
+                    <p>Posición: Delantero</p>
+                    <p>Edad: 27 años</p>
+                    <p>Partidos: 103</p>
+                    <p>Goles: 32</p>
+                    <p>Asistencias: 31</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/c73a4770-0bf1-452f-9ebd-b0f8c33412a0/19-Lamine-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Lamine Yamal</h2> 
+                    <p>Posición: Delantero</p>
+                    <p>Edad: 17 años</p>
+                    <p>Partidos: 67</p>
+                    <p>Goles: 13</p>
+                    <p>Asistencias: 15</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/0d46bf0d-5149-4908-9187-35813907233d/20-Olmo-M.jpg?width=1200&height=750
+                    " alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Dani Olmo</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 26 años</p>
+                    <p>Partidos: 7</p>
+                    <p>Goles: 6</p>
+                    <p>Asistencias: 0</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/caa869d5-91f6-4d7e-9b60-8eba98ac60f4/16-Fermin-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Fermin Lopez</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 21 años</p>
+                    <p>Partidos: 50</p>
+                    <p>Goles: 12</p>
+                    <p>Asistencias: 2</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/1c3026e0-0aa9-4c20-ae49-714c73f68685/17-Casado-M.jpg?width=1200&height=750 " alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Marc Casado</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 21 años</p>
+                    <p>Partidos: 19</p>
+                    <p>Goles: 0</p>
+                    <p>Asistencias: 5</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/2b17db58-6bb5-40fb-b978-65b2fea50db1/21-De_Jong-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Frenkie De Jong</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 27 años</p>
+                    <p>Partidos: 219</p>
+                    <p>Goles: 17</p>
+                    <p>Asistencias: 19</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/d650999a-797a-4326-b0fe-cc5e1d8a9322/06-Gavi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Gavi</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 20 años</p>
+                    <p>Partidos: 116</p>
+                    <p>Goles: 7</p>
+                    <p>Asistencias: 12</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/350837be-717b-4b17-9e66-ef201caac7ae/08-Pedri-M.jpg?width=1200&height=750
+                    " alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Pedri</h2> 
+                    <p>Posición: Mediocentro</p>
+                    <p>Edad: 21 años</p>
+                    <p>Partidos: 159</p>
+                    <p>Goles: 23</p>
+                    <p>Asistencias: 15</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/34c0073f-7235-4776-a508-8fccc377f57b/23-Kounde-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Jules Kounde</h2> 
+                    <p>Posición: Defensa</p>
+                    <p>Edad: 25 años</p>
+                    <p>Partidos: 105</p>
+                    <p>Goles: 4</p>
+                    <p>Asistencias: 14</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/090c9e0c-4446-44c0-ba4b-995dd818cb24/05-Martinez-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>iñigo Martinez</h2> 
+                    <p>Posición: Defensa</p>
+                    <p>Edad: 33 años</p>
+                    <p>Partidos: 40</p>
+                    <p>Goles: 2</p>
+                    <p>Asistencias: 2</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/095e289a-3615-4689-84b4-5b84c3011347/04-Araujo-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Ronald Araujo</h2> 
+                    <p>Posición: Defensa</p>
+                    <p>Edad: 25 años</p>
+                    <p>Partidos: 150</p>
+                    <p>Goles: 8</p>
+                    <p>Asistencias: 5</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/77bc3c02-a6ac-43ea-b5aa-3ec8a9a26289/02-Cubarsi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Pau Cubarsi</h2> 
+                    <p>Posición: Defensa</p>
+                    <p>Edad: 17 años</p>
+                    <p>Partidos: 40</p>
+                    <p>Goles: 0</p>
+                    <p>Asistencias: 2</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/77bc3c02-a6ac-43ea-b5aa-3ec8a9a26289/02-Cubarsi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Alejandro Balde</h2> 
+                    <p>Posición: Defensa</p>
+                    <p>Edad: 21 años</p>
+                    <p>Partidos: 94</p>
+                    <p>Goles: 2</p>
+                    <p>Asistencias: 9</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/242919cd-91d1-4ad9-9f7e-3c9d26cdd4d7/00-Hansi_Flick-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                </div>
+                <div class="player-info">
+                    <h2>Hansi Flick</h2> 
+                    <p>Entrenador</p>
+                </div>
             </div>
         </div>
     </div>
