Modifque html y css de Barcapedia

--- a/Barcapedia/index.html
+++ b/Barcapedia/index.html
@@ -20,7 +20,7 @@
                 <a href="#jugadores">Jugadores</a>
             </div>
             <div class="links-nav">
-                <a href="#">Titulos</a>
+                <a href="#titulos">Titulos</a>
             </div>
             <div class="links-nav">
                 <a href="#" class="log-in">Iniciar sesion <i class="fa-solid fa-user"></i></a>
@@ -86,7 +86,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/f90227fc-4cca-4245-8d96-d1c14f5dcc9a/11-Raphinha-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/f90227fc-4cca-4245-8d96-d1c14f5dcc9a/11-Raphinha-M.jpg?width=1200&height=750" alt="Raphael Raphinha">
                 </div>
                 <div class="player-info">
                     <h2>Raphael Raphinha</h2>
@@ -99,8 +99,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/c73a4770-0bf1-452f-9ebd-b0f8c33412a0/19-Lamine-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
-                </div>
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/c73a4770-0bf1-452f-9ebd-b0f8c33412a0/19-Lamine-M.jpg?width=1200&height=750" alt="Lamine Yamal
                 <div class="player-info">
                     <h2>Lamine Yamal</h2> 
                     <p>Posición: Delantero</p>
@@ -113,7 +112,7 @@
             <div class="player-card">
                 <div class="player-image">
                     <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/0d46bf0d-5149-4908-9187-35813907233d/20-Olmo-M.jpg?width=1200&height=750
-                    " alt="Robert Lewandowski">
+                    " alt="Dani Olmo">
                 </div>
                 <div class="player-info">
                     <h2>Dani Olmo</h2> 
@@ -126,7 +125,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/caa869d5-91f6-4d7e-9b60-8eba98ac60f4/16-Fermin-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/caa869d5-91f6-4d7e-9b60-8eba98ac60f4/16-Fermin-M.jpg?width=1200&height=750" alt="Fermin Lopez">
                 </div>
                 <div class="player-info">
                     <h2>Fermin Lopez</h2> 
@@ -139,7 +138,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/1c3026e0-0aa9-4c20-ae49-714c73f68685/17-Casado-M.jpg?width=1200&height=750 " alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/1c3026e0-0aa9-4c20-ae49-714c73f68685/17-Casado-M.jpg?width=1200&height=750 " alt="Marc Casado">
                 </div>
                 <div class="player-info">
                     <h2>Marc Casado</h2> 
@@ -152,7 +151,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/2b17db58-6bb5-40fb-b978-65b2fea50db1/21-De_Jong-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/2b17db58-6bb5-40fb-b978-65b2fea50db1/21-De_Jong-M.jpg?width=1200&height=750" alt="Frenkie De Jong">
                 </div>
                 <div class="player-info">
                     <h2>Frenkie De Jong</h2> 
@@ -165,7 +164,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/d650999a-797a-4326-b0fe-cc5e1d8a9322/06-Gavi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/d650999a-797a-4326-b0fe-cc5e1d8a9322/06-Gavi-M.jpg?width=1200&height=750" alt="Gavi">
                 </div>
                 <div class="player-info">
                     <h2>Gavi</h2> 
@@ -179,7 +178,7 @@
             <div class="player-card">
                 <div class="player-image">
                     <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/350837be-717b-4b17-9e66-ef201caac7ae/08-Pedri-M.jpg?width=1200&height=750
-                    " alt="Robert Lewandowski">
+                    " alt="Pedri">
                 </div>
                 <div class="player-info">
                     <h2>Pedri</h2> 
@@ -192,7 +191,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/34c0073f-7235-4776-a508-8fccc377f57b/23-Kounde-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/34c0073f-7235-4776-a508-8fccc377f57b/23-Kounde-M.jpg?width=1200&height=750" alt="Jules Kounde">
                 </div>
                 <div class="player-info">
                     <h2>Jules Kounde</h2> 
@@ -205,10 +204,10 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/090c9e0c-4446-44c0-ba4b-995dd818cb24/05-Martinez-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/090c9e0c-4446-44c0-ba4b-995dd818cb24/05-Martinez-M.jpg?width=1200&height=750" alt="Iñigo Martinez">
                 </div>
                 <div class="player-info">
-                    <h2>iñigo Martinez</h2> 
+                    <h2>Iñigo Martinez</h2> 
                     <p>Posición: Defensa</p>
                     <p>Edad: 33 años</p>
                     <p>Partidos: 40</p>
@@ -218,7 +217,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/095e289a-3615-4689-84b4-5b84c3011347/04-Araujo-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/095e289a-3615-4689-84b4-5b84c3011347/04-Araujo-M.jpg?width=1200&height=750" alt="Ronald Araujo">
                 </div>
                 <div class="player-info">
                     <h2>Ronald Araujo</h2> 
@@ -231,7 +230,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/77bc3c02-a6ac-43ea-b5aa-3ec8a9a26289/02-Cubarsi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/77bc3c02-a6ac-43ea-b5aa-3ec8a9a26289/02-Cubarsi-M.jpg?width=1200&height=750" alt="Pau Cubarsi">
                 </div>
                 <div class="player-info">
                     <h2>Pau Cubarsi</h2> 
@@ -244,7 +243,7 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/77bc3c02-a6ac-43ea-b5aa-3ec8a9a26289/02-Cubarsi-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/dee2330a-0f74-45a4-8757-fc12dd7eec03/03-Balde-M.jpg?width=1200&height=750" alt="Alejandro Balde">
                 </div>
                 <div class="player-info">
                     <h2>Alejandro Balde</h2> 
@@ -257,11 +256,217 @@
             </div>
             <div class="player-card">
                 <div class="player-image">
-                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/242919cd-91d1-4ad9-9f7e-3c9d26cdd4d7/00-Hansi_Flick-M.jpg?width=1200&height=750" alt="Robert Lewandowski">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/f6d023f4-d247-414a-9bc0-3feed0d8c148/01-Ter_Stegen-M.jpg?width=1200&height=750" alt="Ter Stegen">
+                </div>
+                <div class="player-info">
+                    <h2>Ter Stegen</h2> 
+                    <p>Posición: Portero</p>
+                    <p>Edad: 32 años</p>
+                    <p>Partidos: 420</p>
+                    <p>Porterias a 0: 174</p>
+                    <p>Paradas: 979</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/c94496a3-0d58-48a5-b61d-7412d99f0a7a/13-Inaki_Pena-M.jpg?width=1200&height=750" alt="Iñaki Peña">
+                </div>
+                <div class="player-info">
+                    <h2>Iñaki Peña</h2> 
+                    <p>Posición: Portero</p>
+                    <p>Edad: 25 años</p>
+                    <p>Partidos: 32</p>
+                    <p>Porterias a 0: 8</p>
+                    <p>Paradas: 60</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/14/dd630dfe-4d4d-4e09-a6f6-4e176382f5aa/25-Szczesny-M.jpg?width=1200&height=750" alt="Wojciech Szczęsny">
+                </div>
+                <div class="player-info">
+                    <h2>Wojciech Szczęsny</h2> 
+                    <p>Posición: Portero</p>
+                    <p>Edad: 34 años</p>
+                    <p>Partidos: 0</p>
+                    <p>Porterias a 0: 0</p>
+                    <p>Paradas: 0</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="player-image">
+                    <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/242919cd-91d1-4ad9-9f7e-3c9d26cdd4d7/00-Hansi_Flick-M.jpg?width=1200&height=750" alt="Hansi Flick">
                 </div>
                 <div class="player-info">
                     <h2>Hansi Flick</h2> 
                     <p>Entrenador</p>
+                    <p>Edad: 59 años</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-titulos-background">
+        <div class="titulos-container" id="titulos">
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/59ea52bd-1c5f-4988-95f7-b1ecc64916d4/Champions-League.png" alt="Champions League">
+                </div>
+                <div class="titulo-info">
+                    <h2>Champions League</h2>
+                    <p>Cantidad: 5</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://bolavip.com/__export/1640264961603/sites/bolavip/img/2021/12/23/la_crop1640264961000.jpg_242310155.jpg" alt="La Liga">
+                </div>
+                <div class="titulo-info">
+                    <h2>Liga</h2>
+                    <p>Cantidad: 27</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/3a2e8c01-9bc0-4337-9435-a85019fcbc35/Fifa-Club-World-Cup.png" alt="Mundial de clubes">
+                </div>
+                <div class="titulo-info">
+                    <h2>Mundial de Clubes</h2>
+                    <p>Cantidad: 3</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/1dc08c65-6d38-4d63-b0c5-fe73aafccf33/Recopa-d-Europa.jpg" alt="Recopa de Europa">
+                </div>
+                <div class="titulo-info">
+                    <h2>Recopa de Europa</h2>
+                    <p>Cantidad: 4</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/c42ca9a8-73d4-4704-82ec-b211a592f5bd/Copa-de-Fires.jpg" alt="Copa de Ferias">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa de Ferias</h2>
+                    <p>Cantidad: 3</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/c42ca9a8-73d4-4704-82ec-b211a592f5bd/Copa-de-Fires.jpg" alt="Supercopa de Ferias">
+                </div>
+                <div class="titulo-info">
+                    <h2>Supercopa de Ferias</h2>
+                    <p>Cantidad: 1</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/5a28f51b-1f2a-4ec1-8475-02ae650a4e13/European-Super-Cup.png" alt="Supercopa de Europa">
+                </div>
+                <div class="titulo-info">
+                    <h2>Supercopa de Europa</h2>
+                    <p>Cantidad: 5</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/93c22f21-e51d-43c6-80c1-39a2ea5c85a4/Copa-Llatina.jpg" alt="Copa Latina">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa Latina</h2>
+                    <p>Cantidad: 2</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/5938ae0d-6861-4dab-acce-105f1fb8c418/Trophy-Silhouette.png" alt="Copa de los Pirineos">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa de los Pirineos</h2>
+                    <p>Cantidad: 4</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/07e7774e-cf87-49b4-b2ce-f56d62967bce/Spanish-Cup.png" alt="Copa del rey">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa del rey</h2>
+                    <p>Cantidad: 31</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/7db0228d-5e88-465b-82db-61654d4bbd4d/Supercopa-Espanya.jpg" alt="Supercopa de España">
+                </div>
+                <div class="titulo-info">
+                    <h2>Supercopa de España</h2>
+                    <p>Cantidad: 14</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/617cf9b9-1477-4bcf-af1e-b2428238240a/Copa-de-la-Lliga.jpg" alt="Copa de la Liga">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa de la Liga</h2>
+                    <p>Cantidad: 2</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/5938ae0d-6861-4dab-acce-105f1fb8c418/Trophy-Silhouette.png" alt="Liga Mediterránea">
+                </div>
+                <div class="titulo-info">
+                    <h2>Liga Mediterránea</h2>
+                    <p>Cantidad: 1</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/08/20/5938ae0d-6861-4dab-acce-105f1fb8c418/Trophy-Silhouette.png" alt="Liga Catalana">
+                </div>
+                <div class="titulo-info">
+                    <h2>Liga Catalana</h2>
+                    <p>Cantidad: 1</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/dd45f7f5-4571-4311-9753-330e93da1777/Campionat-de-Catalunya.jpg" alt="Campeonato de Catalunya">
+                </div>
+                <div class="titulo-info">
+                    <h2>Campeonato de Catalunya</h2>
+                    <p>Cantidad: 23</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/2df809e7-c846-4959-8b6d-1d121cca4a89/Supercopa-Catalunya.jpg" alt="Supercopa Catalunya">
+                </div>
+                <div class="titulo-info">
+                    <h2>Supercopa Catalunya</h2>
+                    <p>Cantidad: 2</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/cb38ee48-7b14-443e-97fc-bba554c0be87/Copa-Catalunya.jpg" alt="Copa Catalunya">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa Catalunya</h2>
+                    <p>Cantidad: 8</p>
+                </div>
+            </div>
+            <div class="titulos">
+                <div class="images-titulos">
+                    <img src="https://www.fcbarcelona.com/fcbarcelona/photo/2018/10/17/918fe117-ae19-4d3e-9f7b-df9b7cf0774a/Eva-Duarte.jpg" alt="Copa Eva Duarte">
+                </div>
+                <div class="titulo-info">
+                    <h2>Copa Eva Duarte</h2>
+                    <p>Cantidad: 3</p>
                 </div>
             </div>
         </div>
