--- a/Barcapedia/index.html
+++ b/Barcapedia/index.html
@@ -100,6 +100,7 @@
             <div class="player-card">
                 <div class="player-image">
                     <img src="https://www.fcbarcelona.com/photo-resources/2024/10/13/c73a4770-0bf1-452f-9ebd-b0f8c33412a0/19-Lamine-M.jpg?width=1200&height=750" alt="Lamine Yamal">
+                </div>
                 <div class="player-info">
                     <h2>Lamine Yamal</h2> 
                     <p>Posición: Delantero</p>
