--- a/Formulario Barcapedia/index.html
+++ b/Formulario Barcapedia/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./styles/colors.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
+    <title>Accceso - Barçapedia</title>
 </head>
 <body>
     <div class="conteiner">
-        <form action="#" class="form">
+        <form action="/Barcapedia/" class="form">
             <div class="h1">
                 <h1>
-                    LOGIN
+                    ACCESO
                 </h1>
             </div>
             <div class="inputs">
@@ -34,12 +34,12 @@
         <div class="information-conteiner">
             <div class="register">
                 <h1 class="h1">
-                    Login
+                    Barçapedia
                 </h1>
                 <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    La mejor página donde encontrarás los jugadores actuales, estadísticas del club, los títulos y la historia.
                 </p>
-                <a href="./page-KeePass/" class="a-register">No Acount?</a>
+                <a href="./page-KeePass/" class="a-register">No tienes cuenta?</a>
             </div>             
         </div>
     </div>
