--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="./Barcapedia/" target="_blank">Barcapedia</a>
         </div>
         <div class="link">
-            <a href="./KeePass" target="_blank">Login</a>
+            <a href="./KeePass" target="_blank">Acceso - Barcapedia</a>
         </div>
         <div class="link">
             <a href="./Discamp" target="_blank">Discamp</a>
