--- a/Formulario Barcapedia/index.html
+++ b/Formulario Barcapedia/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <form action="/Barcapedia/" class="form">
+        <form action="../Barcapedia/" class="form">
             <div class="h1">
                 <h1>
                     ACCESO
