--- a/Barcapedia/index.html
+++ b/Barcapedia/index.html
@@ -9,9 +9,6 @@
 </head>
 <body>
     <header class="header">
-        <div class="image">
-            <img src="" alt="">
-        </div>
         <nav class="nav">
             <div class="links-nav">
                 <a href="#Historia">Historia</a>
@@ -23,7 +20,7 @@
                 <a href="#titulos">Titulos</a>
             </div>
             <div class="links-nav">
-                <a href="#" class="log-in">Iniciar sesion <i class="fa-solid fa-user"></i></a>
+                <a href="../Formulario Barcapedia/" class="log-in">Iniciar sesion <i class="fa-solid fa-user"></i></a>
             </div>
         </nav>
     </header>
